# Research-Olacle

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ja.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/campaign-handoff/: SKILL.md
.agents/skills/chatgpt-research-partner/: SKILL.md
.agents/skills/context-checkpoint/: SKILL.md
.agents/skills/eda-diagnostics/: SKILL.md
.agents/skills/expert-consultation/: SKILL.md
.bootstrap-payload/: part-000.txt
.claude/: CLAUDE.md
.claude/agents/: methodology-auditor.md
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: campaign.yml  exception.yml  mission.yml  strategy.yml
.github/workflows/: secret-scan.yml  test.yml
.research-lab/: init-answers.example.json  project-spec.json  template-manifest.json
.research-lab/config/: agents.toml  compute.toml  context.toml  lab.toml
.research-lab/schema/: campaign-contract.schema.json  campaign-handoff.schema.json  epistemic-claim-event.schema.json  experiment.schema.json
docs/: AGENT_ADAPTERS.md  CHATGPT_PROJECT_INTEGRATION.md  CONTEXT_MANAGEMENT.md  GITHUB_PROJECT_SETUP.md  HUMAN_OBSERVABILITY.md  INITIAL_INTERVIEW.md  KAGGLE.md  MIGRATION_V0_1_HARDENING.md  RELEASE_CHECKLIST.md  RESEARCH_LOOP.md  SECURITY_MODEL.md  UPSTREAM_REFERENCES.md  WINDOWS.md  architecture.md
docs/adr/: 0001-planner-executor-separation.md  0002-github-project-control-plane.md  0003-file-memory-and-bounded-context.md  0004-browser-chatgpt-project.md  0005-autonomous-scientific-decisions.md  0006-windows-first-portable-base.md  0007-durable-loop-orchestrator.md  0008-exclusive-execution-and-resource-gates.md  0009-revisioned-authority-and-epistemic-state.md
docs/ja/: はじめに.md
research/: CURRENT_BRIEF.md  MISSION.md  STATUS.md  USER_INTENT.md
research/human/: CONCEPT_MEMORY.md  README.md
research/protocols/: CONSULTATION_PROTOCOL.md  CONTEXT_BOUNDARIES.md  DEPTH_CONTROL.md  EVALUATION_CONTRACT.md  EVIDENCE_STANDARD.md  EXECUTOR_PROTOCOL.md  PLANNER_PROTOCOL.md
research/setup/: AGENT_CENSUS.json  AGENT_ROSTER.md  AUTONOMY_POLICY.md  COMPUTE_POLICY.md  HUMAN_PROFILE.md  READINESS.md  SETUP_REPORT.md
research/strategy/: ANALOGIES.md  ASSUMPTIONS.md  CLAIMS.md  CURRENT.md  DECISIONS.md  DOMAIN_MAP.md  EVIDENCE_INDEX.md  LANDSCAPE.md  MEMORY.md  OPEN_QUESTIONS.md  PORTFOLIO.md
scripts/: bootstrap.cmd  bootstrap.ps1  bootstrap.sh  researchctl.ps1  verify.cmd  verify.ps1
src/codex_research_harness/: __init__.py  bootstrap.py  brief.py  campaign.py  cli.py  config.py  consultation.py  context.py  doctor.py  eda.py  epistemics.py  experiments.py  github.py  jobs.py  locking.py  loop.py  models.py  plans.py  repository.py  schema.py  selftest.py  utils.py  visualize.py
tests/: helpers.py  test_bootstrap.py  test_campaign.py  test_ci.py  test_consultation.py  test_context.py  test_docs.py  test_eda.py  test_end_to_end.py  test_epistemics.py  test_github.py  test_jobs.py  test_locking.py  test_loop.py  test_plans.py  test_repository.py  test_schema.py  test_security.py  test_selftest.py  test_visualize.py
(+29 files in other folders)
