[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-research-harness"
version = "0.1.0"
description = "Windows-first, GitHub-native autonomous research harness for Codex Goal Mode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Codex Research Harness contributors" }
]
keywords = ["codex", "research", "kaggle", "agents", "goal-mode", "github-projects"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
data = [
  "pandas>=2.2",
  "pyarrow>=17",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9",
]

[project.scripts]
researchctl = "codex_research_harness.cli:main"

[project.urls]
Repository = "https://github.com/Aero123421/Research-Olacle"
Issues = "https://github.com/Aero123421/Research-Olacle/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
